--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -91,6 +91,7 @@ dfn {
   font-style: italic;
 }
 h1 {
+  color: white;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -99,12 +100,10 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: basier_square_monoregular;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
+  font-size: 1.0rem;
   line-height: 1.1;
 }
 mark {
